[project]
name = "claude-telegram-bot"
version = "0.1.0"
description = "Telegram bot for interacting with Claude Code CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "littzhch", email = "2371050115@qq.com"}
]
keywords = ["telegram", "bot", "claude", "ai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
claude-tg-bot = "claude_telegram_bot.bot:main"

[project.urls]
Homepage = "https://github.com/littzhch/claude-telegram-bot"
Repository = "https://github.com/littzhch/claude-telegram-bot"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_telegram_bot"]
